# evpn_agent

./: README.md  evpn_agent.ini  evpn_agent.service  pyproject.toml
src/evpn_agent/: __init__.py  __main__.py  addressmanager.py  agent.py  bridgemanager.py  config.py  frrmanager.py  inventory.py  linkmanager.py  neighmanager.py  ovsmanager.py  routemanager.py  utils.py
